--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -13,6 +13,15 @@ With a roadmap and issues also supplied
 
 * Versions
 
+** Version 0.3.2 <2024-07-01>
+
+Separated individual ergonomic key-mappings as thus:
+
+- wowee--caps_to_ctrl.ahk
+- wowee--ralt_to_ctrl.ahk
+
+These are extra files that can be run in addition to the main wowee.ahk for some common ergonomic keyboard Emacs mappings.
+
 ** Version 0.3.1 <2024-06-30>
 
 This commit has added windows, frames support
